--- a/cordova android/android/www/index.html
+++ b/cordova android/android/www/index.html
@@ -25,5 +25,5 @@
 
 </body>
 <script src="cordova.js"></script>
-<!--<script src="js/index.js"></script>-->
+<!--<script src="index.js"></script>-->
 </html>
